--- a/MyArtPlaces/Base.lproj/Main.storyboard
+++ b/MyArtPlaces/Base.lproj/Main.storyboard
@@ -15,9 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PVm-4R-dTf">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PVm-4R-dTf">
+                                <rect key="frame" x="0.0" y="120" width="414" height="776"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="OAo-Up-ctE" customClass="CustomTableViewCell" customModule="MyArtPlaces" customModuleProvider="target">
@@ -81,11 +80,35 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="5wf-Ak-0hT"/>
                                 </connections>
                             </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Oqp-P9-UCG">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <segments>
+                                    <segment title="Date"/>
+                                    <segment title="Name"/>
+                                </segments>
+                                <connections>
+                                    <action selector="sortSelection:" destination="BYZ-38-t0r" eventType="valueChanged" id="O4F-bK-3Oh"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Oqp-P9-UCG" secondAttribute="trailing" id="F2s-R2-GoH"/>
+                            <constraint firstItem="PVm-4R-dTf" firstAttribute="leading" secondItem="Oqp-P9-UCG" secondAttribute="leading" id="JoJ-Ud-iUO"/>
+                            <constraint firstItem="PVm-4R-dTf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Kwx-gK-cwg"/>
+                            <constraint firstAttribute="bottom" secondItem="PVm-4R-dTf" secondAttribute="bottom" id="QMh-D8-Qou"/>
+                            <constraint firstItem="Oqp-P9-UCG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nxd-Yf-AsC"/>
+                            <constraint firstItem="PVm-4R-dTf" firstAttribute="top" secondItem="Oqp-P9-UCG" secondAttribute="bottom" constant="1" id="vTm-7V-3xj"/>
+                            <constraint firstItem="Oqp-P9-UCG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xal-uw-rHy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="My Art Places" largeTitleDisplayMode="never" id="Ld1-bK-4Ma">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="AZ" id="nbZ-JT-J7n">
+                            <connections>
+                                <action selector="reversedSorting:" destination="BYZ-38-t0r" id="NDJ-6Y-XVE"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="qa6-vL-VwR">
                             <connections>
                                 <segue destination="W6t-sF-oWN" kind="presentation" modalTransitionStyle="crossDissolve" id="Tjd-hC-9WT"/>
@@ -93,6 +116,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="reversedSortingButton" destination="nbZ-JT-J7n" id="6Xy-zc-xs7"/>
+                        <outlet property="segmentedControl" destination="Oqp-P9-UCG" id="uzw-vi-WRC"/>
                         <outlet property="tableView" destination="PVm-4R-dTf" id="uX3-wa-FmK"/>
                     </connections>
                 </viewController>
@@ -105,7 +130,7 @@
             <objects>
                 <tableViewController id="Zfd-kX-YeL" customClass="NewPlaceViewController" customModule="MyArtPlaces" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="nJ4-vD-Jyw">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
@@ -310,9 +335,10 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="TS6-Tz-Nki"/>
+        <segue reference="SQe-54-PfI"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="AZ" width="24" height="24"/>
         <image name="photo" width="170.5" height="170.5"/>
     </resources>
 </document>
