--- a/MyArtPlaces/Base.lproj/Main.storyboard
+++ b/MyArtPlaces/Base.lproj/Main.storyboard
@@ -166,12 +166,25 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" translatesAutoresizingMaskIntoConstraints="NO" id="DJK-BZ-mHE">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vvb-q0-wC5">
+                                                    <rect key="frame" x="344" y="189" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="5Ib-4f-tbe"/>
+                                                        <constraint firstAttribute="height" constant="50" id="Fw8-ek-wTl"/>
+                                                    </constraints>
+                                                    <state key="normal" image="map"/>
+                                                    <connections>
+                                                        <segue destination="imG-s6-Fq2" kind="presentation" identifier="showMap" id="8wr-CA-3hN"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="DJK-BZ-mHE" firstAttribute="leading" secondItem="b4K-Br-xZV" secondAttribute="leading" id="3ww-Vj-8sH"/>
+                                                <constraint firstItem="Vvb-q0-wC5" firstAttribute="trailing" secondItem="b4K-Br-xZV" secondAttribute="trailingMargin" id="6FQ-04-BfL"/>
                                                 <constraint firstAttribute="bottom" secondItem="DJK-BZ-mHE" secondAttribute="bottom" id="E72-bC-b0d"/>
                                                 <constraint firstItem="DJK-BZ-mHE" firstAttribute="top" secondItem="b4K-Br-xZV" secondAttribute="top" id="XNE-yg-NMd"/>
                                                 <constraint firstAttribute="trailing" secondItem="DJK-BZ-mHE" secondAttribute="trailing" id="kWb-eT-ZAY"/>
+                                                <constraint firstItem="Vvb-q0-wC5" firstAttribute="bottom" secondItem="b4K-Br-xZV" secondAttribute="bottomMargin" id="s37-j0-SAF"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -331,6 +344,48 @@
             </objects>
             <point key="canvasLocation" x="2818.840579710145" y="132.58928571428572"/>
         </scene>
+        <!--Map View Controller-->
+        <scene sceneID="eis-bw-KLl">
+            <objects>
+                <viewController id="imG-s6-Fq2" customClass="MapViewController" customModule="MyArtPlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="csY-4O-Pd9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OPk-qj-oMU">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Oo-he-oiN">
+                                <rect key="frame" x="344" y="40" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="7wv-bA-3r3"/>
+                                    <constraint firstAttribute="height" constant="30" id="BB4-xg-lFz"/>
+                                </constraints>
+                                <state key="normal" image="Cancel image"/>
+                                <connections>
+                                    <action selector="closeVC" destination="imG-s6-Fq2" eventType="touchUpInside" id="jEx-33-Zsm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="r6g-Pv-pN1" firstAttribute="trailing" secondItem="1Oo-he-oiN" secondAttribute="trailing" constant="40" id="COD-9T-5Ju"/>
+                            <constraint firstItem="OPk-qj-oMU" firstAttribute="leading" secondItem="r6g-Pv-pN1" secondAttribute="leading" id="DGS-to-FF3"/>
+                            <constraint firstItem="OPk-qj-oMU" firstAttribute="trailing" secondItem="r6g-Pv-pN1" secondAttribute="trailing" id="Nx4-vb-4DS"/>
+                            <constraint firstAttribute="bottom" secondItem="OPk-qj-oMU" secondAttribute="bottom" id="a8a-ka-BiO"/>
+                            <constraint firstItem="OPk-qj-oMU" firstAttribute="top" secondItem="csY-4O-Pd9" secondAttribute="top" id="cNw-Y9-iVk"/>
+                            <constraint firstItem="1Oo-he-oiN" firstAttribute="top" secondItem="r6g-Pv-pN1" secondAttribute="top" constant="40" id="sZ6-ig-zIN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="r6g-Pv-pN1"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="OPk-qj-oMU" id="TZa-43-ZVq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xd0-Uk-cGt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3626.0869565217395" y="131.91964285714286"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="00n-1p-He5">
             <objects>
@@ -376,8 +431,10 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="AZ" width="24" height="24"/>
+        <image name="Cancel image" width="21" height="21"/>
         <image name="emptyStar" width="170.5" height="170.5"/>
         <image name="filledStar" width="170.5" height="170.5"/>
+        <image name="map" width="33" height="33"/>
         <image name="photo" width="170.5" height="170.5"/>
     </resources>
 </document>
